# simulateur_lora_sfrd_5.0

./: .gitignore  CHANGELOG.md  LICENSE  README.md  VALIDATION.md  VALIDATION_TRAFFIC_EXP.md  architecture.py  config.ini  flora_reference.json  pyproject.toml  pytest.ini  requirements.txt  run.py
docker/: Dockerfile
docs/: equations_flora.md  extension_guide.md  lorawan_features.md
examples/: analyse_resultats.py  analyse_runs.py  plot_energy.py  plot_sf_distribution.py  run_basic.py  run_flora_example.py
flora-master/: README.md
launcher/: __init__.py  adr_2.py  adr_standard_1.py  advanced_channel.py  channel.py  compare_flora.py  dashboard.py  downlink_scheduler.py  duty_cycle.py  gateway.py  gps_mobility.py  map_loader.py  mobility.py  multichannel.py  node.py  omnet_phy.py  path_mobility.py  server.py  simulator.py  smooth_mobility.py
numpy/: __init__.py
panel/: __init__.py
scipy/: stats.py
scripts/: build_flora_cpp.ps1  build_flora_cpp.sh  flora_ext.py  generate_flora_noise_table.py  run_10k_scenario.py
simulateur_lora_sfrd/: __init__.py  application.py  architecture.py  gateway.py  loranode.py  mac.py  network_server.py  phy.py  run.py
tests/: conftest.py  test_adr_basic.py  test_airtime_energy.py  test_channel_pa_state.py  test_class_a.py  test_class_bc.py  test_collision_capture.py  test_compare_flora.py  test_dashboard_pause.py  test_dashboard_run_average.py  test_degraded_channel_interval.py  test_effective_interval.py  test_energy_accounting.py  test_exp_asserts.py  test_exp_distribution.py  test_exporter_csv.py  test_fast_forward_finished.py  test_first_interval.py  test_first_interval_cli_dashboard.py  test_first_packet_delay.py  test_flora_capture.py  test_flora_cpp.py  test_flora_defaults.py  test_flora_example.py  test_flora_interval.py  test_flora_packet_interval.py  test_flora_regression.py  test_flora_rssi.py  test_flora_sca.py  test_interval_ks.py  (+38 more)
(+65 files in other folders)
